[gd_scene load_steps=22 format=2]

[ext_resource path="res://UI/ControlUI/EquOver.gd" type="Script" id=1]
[ext_resource path="res://Shaders/SimpleBlur.tres" type="Material" id=2]
[ext_resource path="res://Font/mplus_hzk_12.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Texture/bg_2.png" type="Texture" id=4]
[ext_resource path="res://UI/ItemUI/RoleEquItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/ItemUI/RoleEquItem.gd" type="Script" id=6]
[ext_resource path="res://Texture/Assets-2(Scale-x2)-No-BG_15.png" type="Texture" id=7]
[ext_resource path="res://Texture/Buttons_12.png" type="Texture" id=8]
[ext_resource path="res://Texture/Buttons_14.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=6]
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 133, 34 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 133, 34 )
margin_bottom = 2.45886

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 410.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 72.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "随机装备融合装置"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -476.605
margin_top = -67.5
margin_right = -93.6055
margin_bottom = 17.5
custom_fonts/font = SubResource( 13 )
text = "说明：
可以放入任意品质的相同等级装备
点击开始融合后会生成一件随机品质的同等级装备
融合出的装备部位以第一件放入为准
融合不会出现A级以下的装备"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -186.5
margin_right = 150.0
margin_bottom = 144.5
mouse_filter = 0
texture = ExtResource( 4 )
patch_margin_left = 32
patch_margin_top = 28
patch_margin_right = 29
patch_margin_bottom = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Button" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -42.0
margin_right = 50.0
margin_bottom = 58.0
rect_min_size = Vector2( 100, 100 )
rect_pivot_offset = Vector2( -128.071, -38.4788 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
type = "无装备"

[node name="Image" type="TextureRect" parent="NinePatchRect/Main"]
margin_left = 0.25
margin_right = 100.25
margin_bottom = 100.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equ" type="TextureRect" parent="NinePatchRect/Main/Image"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -24.0
margin_right = 21.0
margin_bottom = 21.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NinePatchRect/Main"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -25.0
margin_right = 59.0
margin_bottom = 21.0
custom_colors/font_outline_modulate = Color( 0.439216, 0.376471, 0.313726, 1 )
custom_fonts/font = SubResource( 6 )
text = "无装备"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
margin_left = 25.0
margin_top = 45.0
margin_right = 273.0
margin_bottom = 119.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" parent="NinePatchRect/GridContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 50.0
margin_bottom = 50.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
type = "无装备"

[node name="Control2" parent="NinePatchRect/GridContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 66.0
margin_right = 116.0
margin_bottom = 50.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
type = "无装备"

[node name="Control3" parent="NinePatchRect/GridContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 132.0
margin_right = 182.0
margin_bottom = 50.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
type = "无装备"

[node name="Control4" parent="NinePatchRect/GridContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 198.0
margin_right = 248.0
margin_bottom = 50.0
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
type = "无装备"

[node name="Button" type="Button" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -78.5
margin_top = -76.0
margin_right = 78.5
margin_bottom = -16.0
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "开始融合"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorMax" type="ColorRect" parent="."]
visible = false
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorMax"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -52.0
margin_right = 672.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 1 )
text = "融合中..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="pressed" from="NinePatchRect/Button" to="." method="_on_Button_pressed"]
